# LatexUp

./: README.md  pyproject.toml
latex_up/: __main__.py  generator.py  options.py  tex_parts.py
latex_up/plain/: document.tex
latex_up/templates/: bib.bib
