[tool.poetry]
name = "latexup"
version = "0.1.0"
description = "CLI tool to quickly generate the boilerplate for latex projects"
authors = ["Patrick Haller <patrickhaller40@googlemail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
bullet = "^2.2.0"
simple-parsing = "^0.0.12"
colorama = "^0.4.4"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
pytest-cov = "^2.10.1"
pylint = "^2.6.0"
black = "^20.8b1"
frosch = "^0.1.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
